--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@taiga-ui/event-plugins": "^4.0.2",
     "@taiga-ui/icons": "^4.64.0",
     "@taiga-ui/kit": "^4.64.0",
+    "@taiga-ui/layout": "^4.64.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
