--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@taiga-ui/icons": "^4.64.0",
     "@taiga-ui/kit": "^4.64.0",
     "@taiga-ui/layout": "^4.64.0",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^21.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
