--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@taiga-ui/icons": "^4.64.0",
     "@taiga-ui/kit": "^4.64.0",
     "@taiga-ui/layout": "^4.64.0",
+    "angular-yandex-maps-v3": "^21.0.0",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^21.1.0",
     "rxjs": "~7.8.0",
@@ -44,6 +45,7 @@
     "@angular/build": "^21.0.2",
     "@angular/cli": "^21.0.2",
     "@angular/compiler-cli": "^21.0.0",
+    "@yandex/ymaps3-types": "^1.0.18413413",
     "jsdom": "^27.1.0",
     "less": "^4.4.2",
     "typescript": "~5.9.2",
