--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@taiga-ui/addon-table": "^4.66.0",
     "@taiga-ui/cdk": "^4.64.0",
     "@taiga-ui/core": "^4.64.0",
     "@taiga-ui/event-plugins": "^4.0.2",
