--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@taiga-ui/icons": "^4.64.0",
     "@taiga-ui/kit": "^4.64.0",
     "@taiga-ui/layout": "^4.64.0",
+    "@types/node": "^25.0.8",
     "angular-yandex-maps-v3": "^21.0.0",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^21.1.0",
